# FreeCAD

./: CMakeLists.txt
cMake/FreeCAD_Helpers/: SetupHomebrew.cmake
docs/: macOS-cmake-fixes.md
src/: CMakeLists.txt
src/Gui/: CMakeLists.txt
src/Mod/Assembly/: CMakeLists.txt
